# Cooking-Book

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/project/: logging_config.py  settings.py  urls.py
project/: settings.py
scripts/: entrypoint.sh
